# resources/model_create_user_attributes.go
@@ -4,13 +4,9 @@
 
 package resources
 
-import "time"
-
-type UserAttributes struct {
+type CreateUserAttributes struct {
 	// Address of manager
 	Address string `json:"address"`
-	// User entry time
-	CreatedAt time.Time `json:"created_at"`
 	// Name of manager
 	Name string `json:"name"`
 }
